--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
             Por haberte ignorado, a mi pesar, he errado.
             En el albor de la vida, te encontré brillante,
             Tus ojos, faros que guían mi existir,
-            Mas, inmerso en afanes, fui ignorante,
-            Y perdí de vista tu luz al partir.
+            Mas, inmerso en afanes, fui ignorante.
             En el eco de mis pensamientos me he hallado,
             Reviviendo momentos que compartimos,
             Cada risa, cada abrazo, todo a mi lado,
@@ -29,12 +28,12 @@
             Perdona la distancia que he forjado,
             Culpa mía, y solo mía, acepto,
             Tu presencia en mi alma, invaluable legado,
-            Prometo, no volveré a ser indiferente, lo juro.
+            Prometo, no volveré a ser indiferente.
             Anhelo que aceptes estas palabras,
             Como el primer paso de mi redención,
-            Deseo que en tu corazón no haya balas,
-            Y puedas hallar, de nuevo, en mí, emoción.
-            Con humildes letras, mi alma se desnuda,
+            Deseo que en tu corazón puedas hallar, 
+            De nuevo, en mí, emoción.
+            Con humildes, mi alma se desnuda,
             En este papel, mi arrepentimiento halla voz,
             Espero que en ti, el perdón se acomoda,
             Y que en tus brazos, de nuevo, encuentre el amor.</p>
